--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="./style.css">
-        <title>documetn 123</title>
-    </head>
-    <body>
-        <header>
-            awesome header
-        </header>
-sdaf
-<div> dev branch
-
-</div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Livecode Html/css 1</title>
+</head>
+<body>
+    
+</body>
 </html>
