--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="index.css">
     <title>Livecode Html/css 1</title>
 </head>
 <body>
-    
+    <div id="root">
+        
+    </div>
 </body>
 </html>
